--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: lt-jp.vmess.top, port: 33702, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
   - {name: 🇨🇳 中国-495.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-936.9KB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51674, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
-  - {name: 🇨🇳 中国-8.32MB/s(Youtube:不良林), server: 112.65.95.60, port: 11420, type: ssr, cipher: chacha20-ietf, password: Fhbe0z, protocol: auth_aes128_sha1, obfs: tls1.2_ticket_auth, protocol-param: 13370:DqGDfE, obfs-param: ""}
-  - {name: 🇨🇳 中国-390.4KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26210, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
   - {name: 🇨🇳 中国-274.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-425.0KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-901.2KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇸🇬 新加坡-463.0KB/s(Youtube:不良林), server: 157.230.41.220, port: 29596, type: ss, cipher: aes-256-cfb, password: e6c1cf51375c407d92d110881a825acb}
-  - {name: 🇰🇷 韩国-619.1KB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
+  - {name: 🇨🇳 中国-3.31MB/s(Youtube:不良林), server: dx-hk.vmess.top, port: 33701, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
+  - {name: 🇨🇳 中国-261.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51674, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
+  - {name: 🇨🇳 中国-308.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-13.46MB/s(Youtube:不良林), server: lt-jp.vmess.top, port: 33704, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
+  - {name: 🇨🇳 中国-510.4KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-325.2KB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51675, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-936.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-8.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.53MB/s(Youtube:不良林)
-      - 🇨🇳 中国-425.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.2KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-463.0KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-619.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
+      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
+      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
