--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-6.57MB/s(Youtube:不良林), server: lt-jp.vmess.top, port: 33702, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
-  - {name: 🇨🇳 中国-495.9KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26240, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-274.1KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16020, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-3.31MB/s(Youtube:不良林), server: dx-hk.vmess.top, port: 33701, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
-  - {name: 🇨🇳 中国-261.5KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16000, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-1.60MB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51674, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
-  - {name: 🇨🇳 中国-308.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26250, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
-  - {name: 🇨🇳 中国-13.46MB/s(Youtube:不良林), server: lt-jp.vmess.top, port: 33704, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
-  - {name: 🇨🇳 中国-510.4KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-192.6KB/s(Youtube:不良林), server: s4.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s4.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-440.4KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 16030, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-535.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇬🇧 英国-2.84MB/s(Youtube:不良林), server: 144.24.88.101, port: 16833, type: vmess, uuid: f5425ccf-3946-4fb4-eb24-5393d78a392f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-325.2KB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51675, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
+  - {name: 🇨🇳 中国-330.2KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-931.3KB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 23133, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇳 中国-2.94MB/s(Youtube:不良林), server: z-cn2.mceee.xyz, port: 25932, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /download, ws-headers: {Host: z-cn2.mceee.xyz}}
+  - {name: 🇨🇳 中国-557.5KB/s(Youtube:不良林), server: 180.163.62.91, port: 10065, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇳 中国-5.23MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-6.57MB/s(Youtube:不良林)
-      - 🇨🇳 中国-495.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-274.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-261.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.60MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-13.46MB/s(Youtube:不良林)
-      - 🇨🇳 中国-510.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-192.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-440.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-535.3KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-330.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-931.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-557.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.23MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
