--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-21.25MB/s(Youtube:不良林), server: dx-hk.vmess.top, port: 33703, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
-  - {name: 🇨🇳 中国-10.04MB/s(Youtube:不良林), server: x.mceee.xyz, port: 26012, type: vmess, uuid: bca2b267-61ac-3152-9525-ea1757f8d9f2, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-325.2KB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51675, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
-  - {name: 🇨🇳 中国-537.7KB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20003, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.01MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20006, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-384.1KB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
-  - {name: 🇨🇳 中国-322.7KB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51674, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
-  - {name: 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-492.7KB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-308.3KB/s(Youtube:不良林), server: bb01.nfeng6.pp.ua, port: 26230, type: ss, cipher: aes-128-gcm, password: bzUdYJ4JzjGfIwhG}
+  - {name: 🇨🇳 中国-467.5KB/s(Youtube:不良林), server: lt-jp.vmess.top, port: 33704, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
+  - {name: 🇨🇳 中国-9.26MB/s(Youtube:不良林), server: cm-jm.okvpn.xyz, port: 20005, type: trojan, password: 8c8578b9-3d56-425d-8bcc-880c4da3600a, sni: cm-jm.okvpn.xyz, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.71MB/s(Youtube:不良林), server: yd.v2yyds.cc, port: 51675, type: ss, cipher: aes-256-gcm, password: c0669346-7ba9-4fda-91a4-238fb8d0a4d2}
+  - {name: 🇯🇵 日本-1.64MB/s(Youtube:不良林), server: s2.upyun.online, port: 12340, type: trojan, password: 316b40c0-0dab-4ea1-9666-ac1658b033b2, sni: s2.upyun.online, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.08MB/s(Youtube:不良林), server: in02.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in02.dns2333.xyz}}
+  - {name: 🇨🇳 中国-1.12MB/s(Youtube:不良林), server: in03.dns2333.xyz, port: 63051, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /hls, ws-headers: {Host: in03.dns2333.xyz}}
+  - {name: 🇨🇳 中国-2.02MB/s(Youtube:不良林), server: in01.dns2333.xyz, port: 63069, type: vmess, uuid: 26cda94e-fb7a-3ce3-9cca-d110505ad8be, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: in01.dns2333.xyz}}
+  - {name: 🇨🇳 中国-10.78MB/s(Youtube:不良林), server: dx-hk.vmess.top, port: 33705, type: ss, cipher: chacha20-ietf-poly1305, password: ffc92e68-2650-4636-b059-e7b981e89f8c}
+  - {name: 🇰🇷 韩国-10.58MB/s(Youtube:不良林), server: 61.111.128.153, port: 8888, type: ss, cipher: rc4-md5, password: Xiongmao@^ios.ss}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-21.25MB/s(Youtube:不良林)
-      - 🇨🇳 中国-10.04MB/s(Youtube:不良林)
-      - 🇨🇳 中国-325.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-537.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.01MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-384.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-322.7KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-476.7KB/s(Youtube:不良林)
-      - 🇯🇵 日本-492.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-467.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-9.26MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-167.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.71MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.64MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.08MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.12MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-10.78MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-10.58MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
